--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "react-social-network",
+  "version": "1.0",
   "private": true,
   "homepage": "https://schekhovtsov.github.io/React-Social-Network",
   "dependencies": {
